(#3835) USA-Section Spacing Fix
Closes #3835

--- a/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/ncids-home-landing/ncids-home-landing.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/ncids-home-landing/ncids-home-landing.scss
@@ -26,3 +26,21 @@
     }
 }
  
+//*Keep these two rules at the bottom of this file*
+// Special Rule for first usa-section
+$section-padding-height-double: 4;
+$section-padding-height-double-mobile: 3;
+main > .usa-section:nth-child(-n + 2):not(.nci-hero) {
+	@include u-padding-top($section-padding-height-double-mobile);
+	@include at-media('tablet') {
+		@include u-padding-top($section-padding-height-double);
+	}
+}
+
+// Special Rule for last page section
+main > section:last-of-type {
+	@include u-padding-bottom($section-padding-height-double-mobile);
+	@include at-media('tablet') {
+		@include u-padding-bottom($section-padding-height-double);
+	}
+}
